manifests/service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: "sapbss-pjt-template"
spec:
  ports:
    - port: 80
      targetPort: 4567
      protocol: TCP
      nodePort: 31000
  type: NodePort
  selector:
    app.kubernetes.io/name: sapbss-pjt-template
