manifests/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "sapbss-pjt-template-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: sapbss-pjt-template
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /template
            pathType: Prefix
            backend:
              service:
                name: "sapbss-pjt-template"
                port:
                  number: 80
